# Pong

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  testing.yml  workflow.yml
cmake/: CMakeCPack.cmake  FindAlure.cmake
glsl/: frag_shader.glsl  vert_shader.glsl
include/: Constants.h  Game.h  IOManager.h  Player.h
include/actors/: Actor.h  Ball.h  Paddle.h
include/collision/: CollisionEngine.h
include/collision/shapes/: AABB.h  AABB.hpp  Capsule.h  ICollisionShape.h  LineSegment.h  LineSegment.hpp  Plane.h  Sphere.h
include/collision/utility/: Intersect.h  Intersect.hpp  Plane.h  Side.h  Side.hpp  Wall.h
include/components/: Ai.hpp  All.hpp  Ball.hpp  Box.hpp  BoxComponent.h  Component.h  InputComponent.h  Player.hpp  Position.hpp  Sprite.hpp  SpriteComponent.h
include/components/update_components/: MoveComponent.h  ScoreComponent.h  UpdateComponent.h
include/core/: Game.hpp
include/events/: KeyDown.hpp  KeyUp.hpp
include/io/: Audio.hpp  IOManager.hpp
include/rendering/: Shader.h  Shader.hpp  VertexArray.h  VertexArray.hpp
include/systems/: CollisionSystem.hpp  MoveSystem.hpp  RenderSystem.hpp
include/utility/: Constants.hpp  EntityType.hpp
include/visitors/actor_visitors/: ActorVisitor.h  MovePredictionVisitor.h
include/visitors/update_component_visitors/: BallCollisionVisitor.h  BallScoreVisitor.h  PaddleCollisionVisitor.h  UpdateComponentVisitor.h
pong/: CMakeLists.txt
pong/docs/: mainpage.md
pong/include/collision/shapes/: AABB.hpp  LineSegment.hpp
pong/include/collision/utility/: Intersect.hpp  Side.hpp
pong/include/components/: Ai.hpp  All.hpp  Ball.hpp  Box.hpp  Player.hpp  Position.hpp  Sprite.hpp
pong/include/core/: Game.hpp
pong/include/events/: KeyDown.hpp  KeyUp.hpp
pong/include/io/: Audio.hpp  IOManager.hpp
pong/include/rendering/: Shader.hpp  VertexArray.hpp
pong/include/systems/: CollisionSystem.hpp  MoveSystem.hpp  RenderSystem.hpp
pong/include/utility/: Constants.hpp  EntityType.hpp  GetPath.hpp  Macro.hpp
pong/src/: CMakeLists.txt  Main.cpp
pong/src/collision/shapes/: CMakeLists.txt
pong/src/collision/utility/: CMakeLists.txt
pong/src/components/: CMakeLists.txt
pong/src/core/: CMakeLists.txt
pong/src/io/: CMakeLists.txt  IOManager.cpp
pong/src/rendering/: CMakeLists.txt  Shader.cpp
pong/src/systems/: CMakeLists.txt  CollisionSystem.cpp
pong/src/utility/: CMakeLists.txt  GetPath.cpp  whereami.c
pong/tests/: CMakeLists.txt
pong/tests/collision/: CMakeLists.txt
pong/tests/collision/utility/: CMakeLists.txt  Intersect.cpp
share/glsl/: frag_shader.glsl  vert_shader.glsl
source/: CMakeLists.txt  Game.cpp  IOManager.cpp  Main.cpp
source/actors/: Actor.cpp  Ball.cpp  Paddle.cpp
source/collision/: CMakeLists.txt  CollisionEngine.cpp
source/collision/shapes/: AABB.cpp  CMakeLists.txt  Capsule.cpp  LineSegment.cpp  Sphere.cpp
source/collision/utility/: CMakeLists.txt  Intersect.cpp
source/components/: Ball.cpp  Box.cpp  BoxComponent.cpp  CMakeLists.txt  Position.cpp  SpriteComponent.cpp
source/components/update_components/: MoveComponent.cpp  ScoreComponent.cpp
source/core/: CMakeLists.txt  Game.cpp
source/io/: Audio.cpp  CMakeLists.txt  IOManager.cpp
source/rendering/: CMakeLists.txt  Shader.cpp  VertexArray.cpp
source/systems/: CMakeLists.txt  CollisionSystem.cpp  MoveSystem.cpp  RenderSystem.cpp
source/visitors/actor_visitors/: MovePredictionVisitor.cpp
source/visitors/update_component_visitors/: BallCollisionVisitor.cpp  BallScoreVisitor.cpp  PaddleCollisionVisitor.cpp
